# rokey_Orai_Bot

./: .gitignore  README.md
01_Dev/: QoS 세팅.docx  pc1_서버설정.docx  system architecture.drawio
01_Dev/최종 코드/rokey_ws/: cus_nav2.yaml  localization.yaml  nav2.yaml  nav2_3.yaml  nav2_4.yaml  nav_recovery.sh
01_Dev/최종 코드/rokey_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
01_Dev/최종 코드/rokey_ws/maps/: map_1.pgm  map_1.yaml
01_Dev/최종 코드/rokey_ws/src/day3/: setup.py
01_Dev/최종 코드/rokey_ws/src/depth_checker_pkg/: setup.cfg  setup.py
01_Dev/최종 코드/rokey_ws/src/final_project/: amr_yolo_1.py  depth_estimator_node1.py  depth_node_1.py  detector_node1.py  test_depth_yaw_pub1.py  tracking1.py
01_Dev/최종 코드/rokey_ws/src/gui_nav_server/miniproject/: package.xml  setup.cfg  setup.py
01_Dev/최종 코드/rokey_ws/src/gui_nav_server/miniproject/miniproject/: gui_nav_server.py
01_Dev/최종 코드/rokey_ws/src/image_capture_pkg/: package.xml  setup.cfg  setup.py
01_Dev/최종 코드/rokey_ws/src/install/: local_setup.sh  (+4 more)
01_Dev/최종 코드/rokey_ws/src/main_2/: package.xml  setup.cfg  setup.py
01_Dev/최종 코드/rokey_ws/src/main_2/main_2/: 02_leader.py  03_follower.py  08_leader.py  12_leader.py  13_leader.py  16_leader.py  test_pub.py  test_sub.py
01_Dev/최종 코드/지능1_오라이봇_최종코드/: AMR_follower_Nav2.py  AMR_follower_tracking.py  AMR_follower_yolo_depth.py  YOLO_start_point.py
01_Dev/최종 코드/지능1_오라이봇_최종코드/GUI_orai_bot/: app.py  bridge_node.py  schedule(1).xlsx
02_Project_Log/: 지능1_오라이봇 시스템 개요.docx  지능1_오라이봇 최종 보고서.docx  지능1_오라이봇_계획서.xlsx
02_Project_Log/지능1_오라이봇_산출물/지능1_오라이봇_제출 폴더/: 지능1_오라이봇_시스템_설계도.drawio
02_Project_Log/지능1_오라이봇_산출물/지능1_오라이봇_제출 폴더/소스코드 폴더/: YOLO_A_zone.py  YOLO_B_zone.py  truck_fork_classifer_01.py
99_Archive/: Diagram.drawio  fixed_tracking_controller.py  node_b_6.py  yolo_wc_trigger.py
(+179 files in other folders)
