<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eycho96@gmail.com">rokey</maintainer>
  <license>TODO: License declaration</license>

  <!-- build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- docking용 -->
  <depend>nav2_msgs</depend>
  <depend>turtlebot4_navigation</depend>

  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
