<?xml version="1.0"?>
<package format="3">
  <name>miniproject</name>
  <version>0.0.0</version>
  <description>Navigation service server package</description>

  <maintainer email="todlfrl123@gmail.com">seonghojin</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>my_interfaces</depend>
  <depend>nav2_simple_commander</depend>
  <depend>turtlebot4_navigation</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
